--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@ai-sdk/openai": "^3.0.23",
     "ai": "^6.0.64",
+    "framer-motion": "^12.29.2",
+    "lucide-react": "^0.563.0",
     "next": "16.1.5",
+    "next-themes": "^0.4.6",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "zod": "^4.3.6"
@@ -21,7 +24,7 @@
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^22.14.0",
     "@types/react": "19.2.10",
-  "eslint": "^9",
+    "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "globals": "^17.2.0",
     "postcss": "^8.5.6",
