feat: add Clerk authentication with dark mode support
- Add Clerk environment variables to .env.example for authentication setup
- Update README with Clerk authentication documentation and setup instructions
- Implement auth check in /api/analyze endpoint with 401 unauthorized response
- Create clerkTheme.ts with light/dark theme variables and element overrides
- Add Clerk components (SignedIn, SignedOut, SignInButton, UserButton) to main page
- Wrap app in Providers with ClerkProvider and theme

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,8 @@
 AI_GATEWAY_API_KEY=your_api_key_here
 # or use: vercel link && vercel env pull
+
+# Clerk Authentication
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
+CLERK_SECRET_KEY=your_clerk_secret_key_here
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/sign-in
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/sign-up
