--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^3.0.23",
+    "@clerk/nextjs": "^6.37.3",
+    "@clerk/themes": "^2.4.51",
     "ai": "^6.0.64",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
