--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 AI_GATEWAY_API_KEY=your_api_key_here
 # or use: vercel link && vercel env pull
 
+# Convex
+NEXT_PUBLIC_CONVEX_URL=https://your-project-name.convex.cloud
+CONVEX_ADMIN_KEY=your_convex_admin_key_here
+
 # Clerk Authentication
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=your_clerk_publishable_key_here
 CLERK_SECRET_KEY=your_clerk_secret_key_here
