--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
+    "convex:dev": "convex dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint"
@@ -14,6 +15,7 @@
     "@clerk/nextjs": "^6.37.3",
     "@clerk/themes": "^2.4.51",
     "ai": "^6.0.64",
+    "convex": "^1.31.7",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.563.0",
     "next": "16.1.5",
